# mistral_project

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile.backend  Dockerfile.frontend  INDEXING_README.md  Makefile  POST_CLONE_SETUP.md  QUICK_START.md  README.md  THEME_MISTRAL.md  docker-compose.yml  docker-start.sh  docker-stop.sh  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  setup.sh  test-docker-build.sh
back_end/app/: index_documents.py  main.py  test_embeddings.py  test_indexing.py  test_mistral_service.py  test_retrieving.py  test_vector_db.py
back_end/app/api/: chat_api.py  vector_api.py
back_end/app/services/: document_indexer.py  message_builder.py  mistral_service.py  scraping_service.py  text_chunker.py  vector_service.py
back_end/mistral_chatbot.egg-info/: PKG-INFO
back_end/tests/: test_mistral_service.py
front_end/: .dockerignore  package-lock.json  package.json
front_end/src/: App.css  App.tsx  index.css
front_end/src/components/Chat/: ChatInput.css  ChatInput.tsx  ChatMessage.css  ChatMessage.tsx  MessageList.css  MessageList.tsx
front_end/src/components/common/: Button.css  Button.tsx  ToggleSwitch.css  ToggleSwitch.tsx
front_end/src/hooks/: useChat.ts
front_end/src/services/: api.ts
mistral_chatbot.egg-info/: PKG-INFO
